--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
     "build": "tsc",
-    "test": "jest --config jestconfig.json"
+    "test": "jest --config jestconfig.json",
+    "release": "npm run build && changeset publish"
   },
   "repository": {
     "type": "git",
