--- a/package.json
+++ b/package.json
@@ -32,12 +32,10 @@
     "ts-jest": "^29.0.5",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@changesets/cli": "^2.26.0"
   },
   "files": [
     "lib/**/*"
-  ],
-  "dependencies": {
-    "@changesets/cli": "^2.26.0"
-  }
+  ]
 }
